[package]
name = "thirdpass-js"
version = "0.5.0"
authors = ["rndhouse <rndhouse@protonmail.com>"]
edition = "2018"
repository = "https://github.com/thirdpass-org/thirdpass-js"
license = "MIT"
description = "Javascript ecosystem extension for the Thirdpass package review system."

[lib]
name = "thirdpass_js_lib"
path = "src/lib.rs"

[[bin]]
name = "thirdpass-js"
path = "src/bin.rs"

[dependencies]
thirdpass-core = { path = "../../thirdpass/thirdpass-core", version = "0.5.0" }

anyhow = "1.0.31"
structopt = "0.3.14"
strum = "0.20.0"
strum_macros = "0.20.1"
maplit = "1.0.2"
tempdir = "0.3.7"

url = "2.1.1"
reqwest = { version = "0.10.6", default-features = false, features = ["blocking", "rustls-tls"] }

handlebars = "3.1.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
